Resolves: tdf#83746 wrapAddress() didn't do what it was supposed to do

i.e. subtracted nMaxRow from MAXROW that is set for entire column
references, resulting in row 983040=1048576-65536, instead of doing a
modulo operation.

Also, entire column/row references are now untouched so they still
reference the entire column/row.

Note that in Excel BIFF8 an absolute addressing of row 1 and 65536 means
entire column, so B$1:B$65536 saved and reloaded results in B:B, which
may be unexpected.

Change-Id: Iae65d47ba937b9ade95e4ea1be98012b80e1c9db
(cherry picked from commit 6821ad076c276b997c44520fd700817566a718c5)
Reviewed-on: https://gerrit.libreoffice.org/25182
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 01a3831f9dc1b9f64775f3382180d27a3b51f131)